<resources>
    <string name="sample_text">Sample Text</string>
    <string name="sample_text_long">Sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text </string>
    <string name="dollar">$</string>
    <string name="sample_number">0</string>

    <string name="app_name">CubeBusters</string>
    <string name="tech_support">Tech Support</string>
    <string name="favourite_films">We have your favourite films</string>
    <string name="app_web">www.cubebusters.com</string>
    <string name="nd_home">Home</string>
    <string name="nd_calendar">Latest Releases</string>
    <string name="nd_games">Films</string>
    <string name="nd_merchandising">Merchandising</string>
    <string name="nd_supportTitle">Techincal Support</string>
    <string name="nd_contact">Contact us</string>
    <string name="nd_help">Help</string>
    <string name="nd_find_us">Where to find us</string>
    <string name="nd_claim">Reclamasion</string>
    <string name="nd_offer">Limited time offers</string>
    <string name="nd_dvd">DVDs</string>
    <string name="nd_blueray">BlueRays</string>
    <string name="nd_cart">Shopping Cart</string>
    <string name="nd_error_text">Error Text</string>

    <string name="button_add">+1</string>
    <string name="button_remove">-1</string>
    <string name="button_add_text">Add 1</string>
    <string name="button_remove_text">Remove 1</string>
    <string name="buy">Buy</string>
    <string name="total">Total</string>
    <string name="pay_method">Payment Method</string>

    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="visa">VISA</string>
    <string name="master_card">MasterCard</string>
    <string name="total_price">total_price</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_your_image">Add your image</string>

    <string name="bill_id">Billing Id</string>
    <string name="issue">Explain your issue</string>
    <string name="add_image">Add image</string>
    <string name="issue_subject">Issue Subject</string>

    <string name="nd_contact_option">Please tell us why are you trying to get in contact with us</string>
    <string name="business_inquiries">Business inquiries</string>
    <string name="order_mishandled">Order mishandled</string>
    <string name="form_instructions">Please fill out this form with your request</string>
    <string name="cart_instructions">Please fill out this form with your billing information</string>
    <string name="place_holder">Write here…</string>
    <string name="name">Name</string>
    <string name="email">Email Subject</string>
    <string name="mail">Email</string>
    <string name="request">Request</string>
    <string name="send_email">Send Email</string>

    <string name="home_tab">Home</string>
    <string name="dvd_tab">DVD</string>
    <string name="blueray_tab">BlueRay</string>
    <string name="offers_tab">Offers</string>
    <string name="latest_tab">Latest</string>

    <string name="home_title">Welcome to CubeBusters!</string>
    <string name="home_slide">Slide to the right to see the best selection of films you could ever hope for</string>
    <string name="home_got">We\'ve also got the latest releases and some unique offers you shouldn\'t let by</string>
    <string name="home_help">If you need any help whatsoever, press the stack of three bars on the top left corner of your screen, you should find some helping options on the side menu.</string>

    <string-array name="dvds">
        <item>El Bueno, el Malo y el Feo</item>
        <item>Tiburón</item>
        <item>2001: Odisea en el espacio</item>
    </string-array>
    <string-array name="bluerays">
        <item>Django desencadenado</item>
        <item>Megalodon</item>
        <item>Interestelar</item>
    </string-array>
    <string-array name="offers">
        <item>Blade runner</item>
        <item>Vengadores: Infinity War</item>
        <item>Excalibur</item>
    </string-array>
    <string-array name="latest">
        <item>Parasite</item>
        <item>Godzilla vs Kong</item>
        <item>Polizón</item>
    </string-array>

    <string name="help_text">Mira yo que quieres que le haga si necesitas ayuda utilizando esta aplicacion de mentira pues quiere decir que soy un diseñador de interfaces pesimo. Espero que solo estes por aqui para ver que todo funciona. Y, efectivamente, no puedo poner tildes con el teclado con el que programo</string>
</resources>